# Copyright 2025 Hybrid Mount Authors
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "notify"
version = "0.1.0"
edition = "2024"
description = "Telegram notification helper for Hybrid Mount build artifacts"
authors = ["Hybrid Mount Developers"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/Hybrid-Mount/hybrid_mount_notify"

[dependencies]
anyhow = "1.0.102"
tgbot = "0.44.0"
tokio = { version = "1.52.2", features = ["full"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
